parcial04 - add set main photo in API
