# src/API/Controllers/MembersController.cs
@@ -104,4 +104,25 @@ IPhotoService photoService) : BaseApiController
 
         return BadRequest("Something went wrong!");
     }
+
+    [HttpPut("photo/{photoId}")]
+    public async Task<ActionResult> SetMainPhoto(int photoId)
+    {
+        var member = await membersRepository.GetMemberForUpdateAsync(User.GetMemberId());
+        if (member == null)
+        {
+            return BadRequest("Token not available in member");
+        }
+        var photo = member.Photos.SingleOrDefault(p => p.Id == photoId);
+
+        if (member.ImageUrl == photo?.Url || photo == null) return BadRequest("Cannot set photo as main");
+
+        member.ImageUrl = photo.Url;
+        member.User.ImageUrl = photo.Url;
+
+        if (await membersRepository.SaveAllAsync()) return NoContent();
+
+        return BadRequest("Some error happened while setting main photo");
+
+    }
 }
